[package]
name = "hushwire"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
blake2 = "0.10"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
ipnet = { version = "2", features = ["serde"] }
libc = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
signal-hook = "0.3"
subtle = "2"
thiserror = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tun = "0.6"
